syntax = "proto3";

option java_multiple_files = true;
package proto;

message NewUserProto{
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string phoneNumber = 4;
  string gender = 5;
  string dateOfBirth = 6;
  string username = 7;
  string password = 8;
  string biography = 9;
  string id = 10;
}

message NewUserResponseProto{
  string id = 1;
  string status = 2;
}

message LoginProto {
  string username = 1;
  string password = 2;
  string code = 3;
}

message  LoginResponseProto {
  string jwt = 1;
  string refreshToken = 2;
  string status = 3;
}

message  VerifyAccountProto {
  string verificationToken = 1;
}
message  VerifyAccountResponseProto {
  string username = 1;
  string status = 2;
}

message  ChangePasswordProto {
  string oldPassword = 1;
  string newPassword = 2;
  string repeatedNewPassword = 3;
  string userId = 4;
}
message  ChangePasswordResponseProto {
  string status = 1;
  string message = 2;
}

message SendTokenProto{
  string id = 1;
  string email = 2;
}

message SendTokenResponseProto{
  string status = 1;
}

message RecoveryPasswordProto{
  string token = 1;
  string password = 2;
  string repeatedPassword = 3;
}

message RecoveryPasswordResponseProto{
  string status = 1;
}

message RefreshTokenProto {
  string token = 1;
}

message APITokenProto {
  string userId = 1;
}

message APITokenResponseProto {
  string token = 1;
  string status = 2;
}

message TokenProto {
  string token = 1;
}


message Change2FAStatusProto {
  string userId = 1;
  bool enable2FA = 2;
}

message Change2FAStatusResponseProto {
  string secret = 1;
  string status = 2;
}

message TwoFAStatusProto {
  string userId = 1;
}

message TwoFAStatusResponseProto {
  bool enabled2FA = 1;
  string status = 2;
}
