syntax = "proto3";

option java_multiple_files = true;
package proto;
import "authModel.proto";

service ConnectionsGrpcService{
  rpc addUser (NewUserProto) returns (NewUserResponseProto);
  rpc login (LoginProto) returns (LoginResponseProto);
}